syntax = "proto3";

package stage.v1;


service StageService {
    rpc GenerateProof(GenerateProofRequest) returns (GenerateProofResponse) {}
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

enum Status {
    SUCCESS = 0;
    COMPUTING = 1;
    WRONG_PARAMETER = 2;
    INTERNAL_ERROR = 3;
    SPLIT_ERROR = 4;
    PROVE_ERROR = 5;
    AGG_ERROR = 6;
    FINAL_ERROR = 7;
    UNSPECIFIED = 8;
}

message BlockFileItem {
    string file_name = 1;
    bytes file_content = 2;
}

message GenerateProofRequest {
    uint64 chain_id = 1;
    uint64 timestamp = 2;
    string proof_id = 3;
    bytes elf_data = 4;
    repeated BlockFileItem block_data = 5;
    uint64 block_no = 6;
    uint32 seg_size = 7;
}

message GenerateProofResponse {
    uint32 status = 1;
    string error_message = 2;
    string proof_id = 3;
    bytes result = 4;
}

message GetStatusRequest {
    string proof_id = 1;
}

message GetStatusResponse {
    string proof_id = 1;
    uint32 status = 2;
    bytes result = 3;
}